--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1> Task Manager </h1>
         <div class="input-form">
             <input type="text" id="task-input" placeholder="Enter a new task...">
-            <button id="add-task-btn"> Add Task </button>
+            <button type="button" id="add-task-btn"> Add Task </button>
         </div>
         <div class="task-list" id="task-list"></div>
     </article>
